# Alder

aux/: config.xml  init_config
aux/Opal/: alder_config_opal.csv
aux/Opal/baseline/: Exam.xml  Interview.xml  alder_scantype_opal.csv
aux/Opal/followup1/: Exam.xml  Interview.xml  alder_f1_scantype_opal.csv
aux/Opal/followup2/: Exam.xml  Interview.xml
doc/: Exam.xml  Interview.xml  database.mwb  qa_testing.odt
php/: database.class.php  util.class.php
sql/: schema.sql
sql/upgrade/1.4/: Code.sql  CodeGroup.sql  CodeType.sql  Exam.sql  Exam2.sql  Image.sql  PatchDatabase.sql  Rating.sql  RemovePlaque.sql  ScanType.sql  ScanTypeHasCodeType.sql
sql/upgrade/1.5/: Code.sql  CodeType.sql  Exam.sql  Image.sql  ImageNote.sql  Interview.sql  PatchDatabase.sql  PatchExamDownloaded.php  Rating.sql  ScanType.sql  ScanTypeHasCodeType.sql  Site.sql  User.sql  UserHasModality.sql  Wave.sql  WaveHasScanType.sql
sql/upgrade/1.7/: CleanUnratedCarotid.php  Image.sql  Interview.sql  PatchDatabase.sql  PatchExamSideIndex.php
src/application/: Alder.cxx  QMainAlderWindow.cxx  QMainAlderWindow.h  QMainAlderWindow.ui
src/application/resources/: QAlderApplication.qrc
src/business/: ActiveRecord.cxx  ActiveRecord.h  Application.cxx  Application.h  CMakeLists.txt  Code.cxx  Code.h  CodeGroup.cxx  CodeGroup.h  CodeType.cxx  CodeType.h  Configuration.cxx  Configuration.h  Database.cxx  Database.h  Exam.cxx  Exam.h  Image.cxx  Image.h  ImageNote.cxx  ImageNote.h  Interview.cxx  Interview.h  Modality.cxx  Modality.h  ModelObject.cxx  ModelObject.h  OpalService.cxx  OpalService.h  ParticipantData.cxx  ParticipantData.h  ProgressProxy.cxx  ProgressProxy.h  QueryModifier.cxx  QueryModifier.h  Rating.cxx  Rating.h  ScanType.cxx  ScanType.h  Site.cxx  (+5 more)
src/common/: CMakeLists.txt  Common.cxx  Common.h  Utilities.h
src/interface/qt/application/: Alder.cxx  CMakeLists.txt  QAlderApplication.cxx  QAlderApplication.h  QMainAlderWindow.cxx  QMainAlderWindow.h  QMainAlderWindow.ui  QMainAlderWindow_p.h
src/interface/qt/application/resources/: QAlderApplication.qrc
src/interface/qt/generic/: CMakeLists.txt  QAboutDialog.cxx  QAboutDialog.h  QAlderAbstractView.cxx  QAlderAbstractView.h  QAlderAbstractView_p.h  QAlderDicomTagWidget.cxx  QAlderDicomTagWidget.h  QAlderDoubleSlider.cxx  QAlderDoubleSlider.h  QAlderFramePlayerWidget.cxx  QAlderFramePlayerWidget.h  QAlderFramePlayerWidget.ui  QAlderImageControl.cxx  QAlderImageControl.h  QAlderImageControl.ui  QAlderImageWidget.cxx  QAlderImageWidget.h  QAlderImageWidget.ui  QAlderSliceView.cxx  QAlderSliceView.h  QAlderSliceView_p.h  QAlderSliderWidget.cxx  QAlderSliderWidget.h  QMailSender.cxx  QMailSender.h  QMedicalImageWidget.cxx  QMedicalImageWidget.h  QMedicalImageWidget.ui
src/interface/qt/generic/resources/: QAlderGenericWidgets.qrc
src/interface/qt/model/: CMakeLists.txt  QAlderAtlasWidget.cxx  QAlderAtlasWidget.h  QAlderAtlasWidget.ui  QAlderAtlasWidget_p.h  QAlderInterviewWidget.cxx  QAlderInterviewWidget.h  QAlderInterviewWidget.ui  QAlderInterviewWidget_p.h  QChangePasswordDialog.cxx  QChangePasswordDialog.h  QCodeDialog.cxx  QCodeDialog.h  QCodeDialog.ui  QCodeDialog_p.h  QLoginDialog.cxx  QLoginDialog.h  QMailSender.cxx  QMailSender.h  QReportDialog.cxx  QReportDialog.h  QReportDialog.ui  QReportDialog_p.h  QSelectInterviewDialog.cxx  QSelectInterviewDialog.h  QSelectInterviewDialog.ui  QSelectInterviewDialog_p.h  QSelectWaveDialog.cxx  QSelectWaveDialog.h  QSelectWaveDialog.ui  QSelectWaveDialog_p.h  QUserListDialog.cxx  QUserListDialog.h  QUserListDialog_p.h  QVTKProgressDialog.cxx  QVTKProgressDialog.h
src/programs/: CMakeLists.txt
src/programs/dexaclean/: DexaClean.cxx
src/programs/interviewupdate/: CMakeLists.txt  InterviewUpdate.cxx
src/vtk/: CMakeLists.txt  vtkAlderMySQLDatabase.cxx  vtkAlderMySQLQuery.cxx  vtkAnimationPlayer.cxx  vtkAnimationPlayer.h  vtkCenteredAxesActor.cxx  vtkCenteredAxesActor.h  vtkCustomCornerAnnotation.cxx  vtkCustomCornerAnnotation.h  vtkCustomInteractorStyleImage.cxx  vtkCustomInteractorStyleImage.h  vtkFrameAnimationPlayer.cxx  vtkFrameAnimationPlayer.h  vtkImageCoordinateWidget.cxx  vtkImageCoordinateWidget.h  vtkImageDataReader.cxx  vtkImageDataReader.h  vtkImageDataWriter.cxx  vtkImageDataWriter.h  vtkImageWindowLevel.cxx  vtkImageWindowLevel.h  vtkMedicalImageViewer.cxx  vtkMedicalImageViewer.h  vtkXMLConfigurationFileReader.cxx  vtkXMLConfigurationFileReader.h  vtkXMLFileReader.cxx  vtkXMLFileReader.h
testing/: BackTrace.cxx  CMakeLists.txt  DemangledBackTrace.cxx  OpalHttp.cxx
