PROJECT( AlderApplication )

SET( ALDER_APP_SRC
  Alder.cxx
  QAlderApplication.cxx
  QMainAlderWindow.cxx
)

SET( ALDER_APP_UI
  QMainAlderWindow.ui
)

SET( ALDER_APP_MOC
  QMainAlderWindow.h
  QMainAlderWindow_p.h
)

SET( AlderApp_Resources
  ${CMAKE_CURRENT_SOURCE_DIR}/resources/QAlderApplication.qrc
)

QT4_WRAP_UI( AlderApp_UI   ${ALDER_APP_UI} )
QT4_WRAP_CPP( AlderApp_MOC ${ALDER_APP_MOC} )
QT4_ADD_RESOURCES( AlderApp_QRC ${AlderApp_Resources} )

ADD_DEFINITIONS( -DQT_GUI_LIBS -DQT_CORE_LIB )

SET_SOURCE_FILES_PROPERTIES( ${ALDER_APP_SRC} PROPERTIES OBJECT_DEPENDS "${AlderApp_UI}" )

INCLUDE_DIRECTORIES(
  ${ALDER_COMMON_DIR}
  ${ALDER_VTK_DIR}
  ${ALDER_BUSINESS_DIR}
  ${ALDER_QT_MODEL_DIR}
  ${ALDER_QT_GENERIC_DIR}
  ${QT_INCLUDE_DIR}
  ${CRYPTO++_INCLUDE_DIR}
)

ADD_EXECUTABLE( alder 
  ${ALDER_APP_SRC}
  ${AlderApp_UI}
  ${AlderApp_MOC}
)

TARGET_LINK_LIBRARIES( alder
  ${ALDER_LIBRARIES}
  ${QT_LIBRARIES}
)

INSTALL( TARGETS alder RUNTIME DESTINATION bin )
