PROJECT( AlderApplication )

SET( ALDER_APP_SRC
  Alder.cxx
  QAlderApplication.cxx
  QMainAlderWindow.cxx
)

SET( ALDER_APP_UI
  QMainAlderWindow.ui
)

SET( ALDER_APP_MOC
  QMainAlderWindow.h
  QMainAlderWindow_p.h
)

SET( ALDER_APP_RCC ${CMAKE_CURRENT_SOURCE_DIR}/resources/QAlderApplication.qrc )

QT5_WRAP_UI( AlderApp_UI ${ALDER_APP_UI} )
QT5_WRAP_CPP( AlderApp_MOC ${ALDER_APP_MOC} )
QT5_ADD_RESOURCES( AlderApp_QRC ${ALDER_APP_RCC} )

SET_SOURCE_FILES_PROPERTIES( ${ALDER_APP_SRC} PROPERTIES OBJECT_DEPENDS "${AlderApp_UI}" )

INCLUDE_DIRECTORIES(
  ${ALDER_COMMON_DIR}
  ${ALDER_VTK_DIR}
  ${ALDER_BUSINESS_DIR}
  ${ALDER_QT_MODEL_DIR}
  ${ALDER_QT_GENERIC_DIR}
  ${CRYPTO++_INCLUDE_DIR}
)

ADD_EXECUTABLE(alder
  ${ALDER_APP_SRC}
  ${AlderApp_UI}
  ${AlderApp_MOC}
  ${AlderApp_QRC}
)

TARGET_LINK_LIBRARIES( alder ${ALDER_LIBRARIES} )

INSTALL( TARGETS alder RUNTIME DESTINATION bin )
